gitops/platform-apps/adguard/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
  selector:
    app.kubernetes.io/name: adguard
